tests/variables/valid/assign.amu
main :: () -> s32 {
    a:s32;
    a = 2;
    return a;
}