tests/variables/invalid/syntax_err_bad_decl.amu
main :: () -> s32 {
    a:ints = 1;
    return a;
}